--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
   <title>House Monitor</title>
-  <script src="js/jquery-2.1.4.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/main.js"></script>
+  <script src="lib/jquery-2.1.4.js"></script>
+  <script src="lib/utils.js"></script>
+  <script src="main.js"></script>
 
   <style>
     body {
