--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="js/jquery-2.1.4.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/Dashboard.js"></script>
+  <script src="js/CurrentValuesPanel.js"></script>
 
   <style>
     body {
