--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
   <title>House Monitor</title>
-  <script src="js/jquery-2.1.4.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/pep.min.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
   <script src="js/Dashboard.js"></script>
