--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--<meta name="viewport" content="width=device-width, initial-scale=10.0, minimum-scale=10.0, maximum-scale=20.0, user-scalable=no">-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
-  <title>House Monitor</title>
+  <title>Temp Monitor</title>
   <script src="js/jquery.min.js"></script>
   <script src="js/pep.min.js"></script>
   <script src="js/utils.js"></script>
