--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
   <script src="js/Dashboard.js"></script>
+  <script src="js/DataLoader.js"></script>
   <script src="js/CurrentValuesPanel.js"></script>
   <script src="js/ChartPanel.js"></script>
 
