--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="js/main.js"></script>
   <script src="js/Dashboard.js"></script>
   <script src="js/DataLoader.js"></script>
+  <script src="js/DataRow.js"></script>
   <script src="js/CurrentValuesPanel.js"></script>
   <script src="js/ChartPanel.js"></script>
 
