--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="js/Dashboard.js"></script>
   <script src="js/DataLoader.js"></script>
   <script src="js/DataRow.js"></script>
+  <script src="js/SensorsDescr.js"></script>
   <script src="js/CurrentValuesPanel.js"></script>
   <script src="js/ChartPanel.js"></script>
 
