--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/pep.min.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/LocalStorage.js"></script>
   <script src="js/Dashboard.js"></script>
   <script src="js/DataLoader.js"></script>
   <script src="js/DataRow.js"></script>
