--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <!--<meta name="viewport" content="width=device-width, initial-scale=10.0, minimum-scale=10.0, maximum-scale=20.0, user-scalable=no">-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
-  <title>House Monitor</title>
+  <title>Temp Monitor</title>
   <script src="js/jquery.min.js"></script>
   <script src="js/pep.min.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
   <script src="js/Dashboard.js"></script>
+  <script src="js/DataLoader.js"></script>
+  <script src="js/DataRow.js"></script>
+  <script src="js/SensorsDescr.js"></script>
   <script src="js/CurrentValuesPanel.js"></script>
   <script src="js/ChartPanel.js"></script>
 
