refactored to TextBox

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
   <title>Temp Monitor</title>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/pep.min.js"></script>
+  <script src="js/lib/jquery.min.js"></script>
+  <script src="js/lib/pep.min.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
   <script src="js/Dashboard.js"></script>
-  <script src="js/DataLoader.js"></script>
-  <script src="js/DataRow.js"></script>
-  <script src="js/SensorsDescr.js"></script>
-  <script src="js/CurrentValuesPanel.js"></script>
-  <script src="js/ChartPanel.js"></script>
+  <script src="js/data/DataLoader.js"></script>
+  <script src="js/data/DataRow.js"></script>
+  <script src="js/chart/SensorsDescr.js"></script>
+  <script src="js/current/CurrentValuesPanel.js"></script>
+  <script src="js/current/Sensor.js"></script>
+  <script src="js/current/TextBox.js"></script>
+  <script src="js/chart/ChartPanel.js"></script>
 
   <style>
     body {
